# 100dayscoding

./: .gitignore  README.md
acronym-converter/: Cargo.toml
async_await/: README.md
atbash-cipher/: Cargo.toml
bracket-finder/: Cargo.toml
car_simulation/: README.md
conditionals/: README.md
csv-reader/: Cargo.toml  README.md
day1/: README.md
day10/: Cargo.toml
day12/: README.md
day2/: README.md
day3/: README.md
day4/: README.md
day8/: README.md
day9/: README.md
day_04/: README.md
day_06/: README.md
day_07/: README.md
day_08/: README.md
day_10/: Cargo.toml
day_14/: README.md
day_15/: Cargo.toml
day_16/: README.md
day_22/: README.md
day_24/: README.md
day_25/: README.md
day_27/: README.md
day_28/: Cargo.toml
day_29/: Cargo.toml
day_30/: Cargo.toml
day_31/: Cargo.toml
day_32/: Cargo.toml  README.md
day_34/: Cargo.toml  README.md
day_35/: Cargo.toml
day_37/: Cargo.toml
day_39/: Cargo.toml  README.md
day_40/: Cargo.toml
day_41/: Cargo.toml  README.md
enums/: README.md
error_handling/: README.md
factorial_using_recursion/: README.md
file_handling/: REAMDE.md  hello.txt
hashmap/: README.md
hashmap-macro/: Cargo.toml
hello_world_actix-web/: README.md
isogram/: Cargo.toml
iterators/: Cargo.toml  README.md
jwt-auth/: Cargo.toml
jwt-auth/src/: auth.rs  handlers.rs  main.rs  models.rs
leap-year/: Cargo.toml
lifetimes/: README.md
macros/: README.md
mongo-lib/: Cargo.toml
mongo-lib/src/: db.rs  error.rs  handlers.rs  main.rs  model.rs
mongodb/: Cargo.toml
multithreading_concurrency_examples/: README.md
multithreading_councurrency_overview/: Cargo.toml
nucleotide_count/: Cargo.toml
number_guessing_game/: README.md
ownership_and_references_and_borrowing/: README.md
password-vault/: Cargo.toml
pig-latin-converter/: Cargo.toml
quickshare/: Cargo.toml
quickshare/src/: main.rs
quickshare/static/: index.html
roman-number-converter/: Cargo.toml
rotational-cipher/: Cargo.toml
routing_actix-web/: Cargo.toml  README.md
routing_rocket/: README.md
shared_state_concurrency/: README.md
simple_crud_user_api/: Cargo.toml  README.md
simple_crud_user_api/src/: db.rs  error.rs  main.rs
simple_crud_user_api/src/db/: database.rs  user_data_trait.rs
simple_crud_user_api/src/error/: user_error.rs
simple_crud_user_api/src/models/: mod.rs  user.rs
simple_crud_user_api/users.db/: 000013.sst  000016.sst  IDENTITY  MANIFEST-000010  MANIFEST-000018  OPTIONS-000020
smart_pointers/: Cargo.toml  (+1 more)
weather_api/: .env  Cargo.toml
weather_api/src/: main.rs  models.rs
weather_api/src/models/: aqi.rs  weather.rs
yew-form/: Cargo.toml  index.html  tailwind.config.js
yew-form/src/: main.rs
yew-form/src/components/: custom_form.rs  mod.rs  text_field.rs
(+110 files in other folders)
