[package]
name = "jwt-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.2.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
warp = "0.3.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
chrono = "0.4.34"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = "abort"