[package]
name = "mongo-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.6"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
chrono = { version = "0.4.34", features = ["serde"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
mongodb = "2.8.1"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = "abort"