[package]
name = "quickshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
rusqlite = "0.31.0"
rand = "0.9.0-alpha.0"
serde = { version = "1.0.197", features = ["derive"] }
actix-files = "0.6.5"
