[package]
name = "simple_crud_user_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.77"
derive_more = "0.99.17"
json = "0.12.4"
serde = {version = "1.0.196", features = ["derive"]}
surrealdb = "1.1.1"
uuid = "1.7.0"
validator = {version = "0.16.1", features = ["derive"]}
