[package]
name = "yew-form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.11.0"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.68", features = ["HtmlInputElement"] }
